--- a/public/index.html
+++ b/public/index.html
@@ -9,25 +9,26 @@
     <style>
         body {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             background-color: #ffffff;
             font-family: 'Roboto Slab', serif;
-            position: relative;
+            padding: 20px;
+            box-sizing: border-box;
         }
         .content {
             text-align: center;
-            margin: 0 20%;
         }
         h1 {
-            font-size: 5em;
+            font-size: 3em;
             margin-bottom: 0.5em;
             color: #333;
             font-family: 'Lora', serif;
         }
         p {
-            font-size: 1.2em;
+            font-size: 1em;
             color: #666;
             line-height: 1.6;
             text-align: left;
@@ -38,25 +39,44 @@
             font-style: italic;
         }
         .social-links {
-            position: absolute;
-            top: 20px;
-            right: 20px;
+            margin-top: 20px;
         }
         .social-links a {
             margin-left: 10px;
             color: #666;
         }
+
+        /* Media query for larger screens */
+        @media screen and (min-width: 600px) {
+            body {
+                padding: 0;
+            }
+            .content {
+                margin: 0 20%;
+            }
+            h1 {
+                font-size: 5em;
+            }
+            p {
+                font-size: 1.2em;
+            }
+            .social-links {
+                position: absolute;
+                top: 20px;
+                right: 20px;
+            }
+        }
     </style>
 </head>
 <body>
-    <div class="content">
-        <h1>VoxPublica</h1>
-        <p>VoxPublica is a non-profit organization dedicated to invigorating public debate, fostering citizen engagement, and enhancing transparency in public affairs. As a catalyst for democratic renewal, we provide a modern framework that promotes active participation and informed decision-making, thereby nurturing a more engaged and enlightened citizenship.</p>
-    </div>
-    <div class="social-links">
-        <a href="https://twitter.com/VoxPublicaOrg" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
-        <a href="https://facebook.com/VoxPub" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
-        <a href="mailto:mail@vox.pub"><i class="fas fa-envelope"></i></a>
-    </div>
+<div class="content">
+    <h1>VoxPublica</h1>
+    <p>VoxPublica is a non-profit organization dedicated to invigorating public debate, fostering citizen engagement, and enhancing transparency in public affairs. As a catalyst for democratic renewal, we provide a modern framework that promotes active participation and informed decision-making, thereby nurturing a more engaged and enlightened citizenship.</p>
+</div>
+<div class="social-links">
+    <a href="https://twitter.com/VoxPublicaOrg" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+    <a href="https://facebook.com/VoxPub" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+    <a href="mailto:mail@vox.pub"><i class="fas fa-envelope"></i></a>
+</div>
 </body>
 </html>
